--- a/css/styles.css
+++ b/css/styles.css
@@ -511,6 +511,11 @@ address {
   width: 50%;
 }
 
+.contacts-form .modal-btn {
+  color: var(--secondary-text-color-theme-dark);
+}
+
+
 .contacts-info {
   padding-left: 100px;
   width: 50%;
