--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,8 @@ address {
 }
 
 .overtitle {
+  display: flex;
+  align-items: center;
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
@@ -115,18 +117,27 @@ address {
 }
 
 .overtitle::before {
-  content: "__________  ";
+  content: "";
   width: 60px;
   height: 1px;
-
+  flex-shrink: 0;
+  margin-right: 20px;
 }
 
 .overtitle-theme-dark {
   color: rgba(157, 164, 189, 0.6);
 }
 
+.overtitle-theme-dark::before {
+  background-color: rgba(157, 164, 189, 0.6);
+}
+
 .overtitle-theme-light {
   color: var(--secondary-text-color-theme-light);
+}
+
+.overtitle-theme-light::before {
+  background-color: var(--secondary-text-color-theme-light);
 }
 
 .secondary-title {
@@ -175,6 +186,27 @@ address {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: #ffffff;
+  color: var(--secondary-text-color-theme-light);
+  border-radius: 50%;
+}
+
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+  fill: var(--accent-color);
 }
 
 /* ====== END COMPONENTS ====== */
@@ -248,6 +280,19 @@ address {
 }
 
 .cocial-links-list {
+  /* display: flex; */
+  align-items: center;
+}
+
+.cocial-links-list::before {
+  display: block;
+  content: "";
+  width: 60px;
+  height: 1px;
+  flex-shrink: 0;
+  margin-right: 40px;
+
+  background-color: var(--secondary-text-color-theme-light);
 }
 
 .hero-right-side {
@@ -256,19 +301,14 @@ address {
   padding-bottom: 206px;
   padding-right: 470px;
 
-  background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #434343,
-    #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #434343,
-    #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  /* background-color: var(--secondary-text-color-theme-light) */
+  background-color: var(--secondary-text-color-theme-light);
+  background-image: linear-gradient(
+      rgba(25, 28, 38, 0.2),
+      rgba(25, 28, 38, 0.2)
+    ),
+    url(../images/hero-bg-img.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .main-title {
@@ -324,11 +364,12 @@ address {
 
 .prices-section {
   background-color: #111319;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
       rgba(17, 19, 25, 0.8),
       rgba(17, 19, 25, 0.8)
     ),
-    url("../images/prices-bg-img.jpg");
+    url("../images/prices-bg-img.jpg"); */
+  background-image: url("../images/prices-bg-img.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -354,15 +395,13 @@ address {
 .prices-list-left {
   width: 585px;
   height: 240px;
-  background: linear-gradient(
-    180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
 }
 
 .prices-list-right {
   width: 585px;
   height: 240px;
-  background: linear-gradient(
-    180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
 }
 
 .prices .modal-btn {
@@ -463,6 +502,8 @@ address {
 
 .masters-content-wraper {
   padding-top: 30px;
+  padding-left: 82px;
+  padding-right: 82px;
 }
 
 .masters-name {
@@ -484,6 +525,7 @@ address {
   letter-spacing: 0.02em;
 
   color: var(--accent-color);
+  margin-bottom: 30px;
 }
 
 /* ====== END MASTERS ====== */
@@ -514,7 +556,6 @@ address {
 .contacts-form .modal-btn {
   color: var(--secondary-text-color-theme-dark);
 }
-
 
 .contacts-info {
   padding-left: 100px;
