--- a/css/styles.css
+++ b/css/styles.css
@@ -83,12 +83,21 @@ address {
   cursor: pointer;
 
   /* color: #FFFFFF; */
+  transition: background-color 500ms ease, color 500ms ease;
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: var(--accent-color);
-  color: #ffffff;
+  color: var(--secondary-text-color-theme-dark);
+}
+
+.modal-btn-theme-light {
+  color: var(--secondary-text-color-theme-light);
+}
+
+.modal-btn-theme-dark {
+  color: var(--secondary-text-color-theme-dark);
 }
 
 .cocial-links-list-link {
@@ -200,8 +209,18 @@ address {
   width: 44px;
   height: 44px;
   background-color: #ffffff;
-  color: var(--secondary-text-color-theme-light);
   border-radius: 50%;
+  transition: background-color 500ms ease;
+}
+
+.social-list-icon {
+  fill: var(--secondary-text-color-theme-light);
+  transition: fill 500ms ease;
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--secondary-text-color-theme-light);
 }
 
 .social-list-link:hover .social-list-icon,
@@ -214,6 +233,9 @@ address {
 /* ====== START HEADER ====== */
 
 .header {
+  position: absolute;
+  width: 100%;
+
   margin-top: 32px;
   margin-bottom: 32px;
 }
@@ -253,8 +275,8 @@ address {
   line-height: 1.33;
   letter-spacing: 0.1em;
 
-  color: inherit;
-  /* color: #ffffff; */
+  color: #ffffff;
+  transition: color 500ms ease;
 }
 
 .nav-list-link:hover,
@@ -276,12 +298,23 @@ address {
 } */
 
 .hero-left-side {
-  width: 155px;
+  display: flex;
+  align-items: flex-end;
+
+  width: 100px;
+  padding-left: 26px;
+  padding-bottom: 40px;
 }
 
 .cocial-links-list {
-  /* display: flex; */
+  display: flex;
   align-items: center;
+}
+
+.hero-cocial-links-list {
+  transform: rotate(-90deg);
+  transform-origin: left top;
+  gap: 40px;
 }
 
 .cocial-links-list::before {
@@ -599,7 +632,8 @@ address {
 /* ====== START FOOTER ====== */
 
 .footer {
-  padding: 55px;
+  padding-top: 55px;
+  padding-bottom: 55px;
 }
 
 .footer > .flex-container {
@@ -620,3 +654,47 @@ address {
 }
 
 /* ====== END FOOTER ====== */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 500ms ease, visibility 500ms ease;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 580px;
+  background-color: #ffffff;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #555555;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+}
