--- a/css/styles.css
+++ b/css/styles.css
@@ -678,8 +678,9 @@ address {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 528px;
-  height: 580px;
+  height: 500px;
   background-color: #ffffff;
+  padding: 40px;
 }
 
 .modal-close-btn {
@@ -697,4 +698,133 @@ address {
   background-color: transparent;
   padding: 0;
   cursor: pointer;
+}
+
+.contact-form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-form-input-wrapper {
+  display: block;
+  position: relative;
+  margin-top: 6px;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid #555555;
+  border-radius: 5px;
+  transition: border-color 500ms ease;
+}
+
+.contact-form-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.contact-form-input:focus + .contact-form-icon {
+  fill: var(--accent-color);
+}
+
+.contact-form-icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  fill: #555555;
+  transition: fiil 500ms ease;
+}
+
+.contact-form-massage {
+  width: 100%;
+  height: 100px;
+  margin-top: 6px;
+  padding: 12px 16px;
+  border: 1px solid #555555;
+  border-radius: 5px;
+  resize: none;
+}
+
+.contact-form-massage:focus {
+  outline: none;
+  border-color: var(--accent-color);
+  transition: border-color 500ms ease;
+}
+
+.contact-form-massage::placeholder {
+  text-transform: uppercase ;
+}
+
+.contact-form-checkbox-wrapper {
+  margin-bottom: 30px;
+}
+
+.contact-form-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.contact-form-checkbox-label {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+
+.contact-form-checkbox-label::before {
+  content: '';
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  outline: 1px solid #555555;
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+  outline: 1px solid var(--accent-color);
+}
+
+.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+  background: url(../images/icon-check.svg);
+  background-color: var(--accent-color);
+  background-size: cover;
+}
+
+.contact-form-submit-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 160px;
+  padding: 12px 16px;
+  border: 1px solid var(--accent-color);
+  border-radius: 25px;
+  background-color: transparent;
+
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  cursor: pointer;
+
+  transition: background-color 500ms ease, color 500ms ease;
+}
+
+.contact-form-submit-btn:focus,
+.contact-form-submit-btn:hover {
+  background-color: var(--accent-color);
+  color: #ffffff;
 }
