--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,19 @@
   --bg-color: #f7f7f7;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 body,
 footer {
   font-family: var(--primary-font-family);
@@ -48,7 +61,10 @@ address {
   text-decoration: none;
 }
 
-/* ====== START COMPONENTS ====== */
+.section {
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
 
 .container {
   width: 1280px;
@@ -62,18 +78,12 @@ address {
   display: flex;
 }
 
-.section {
-  padding-top: 130px;
-  padding-bottom: 130px;
-}
-
 .modal-btn {
   min-width: 160px;
   padding: 12px 16px;
   border: 1px solid var(--accent-color);
   border-radius: 25px;
   background-color: transparent;
-
   font-family: inherit;
   font-weight: 600;
   font-size: 12px;
@@ -81,7 +91,6 @@ address {
   letter-spacing: 0.09em;
   text-transform: uppercase;
   cursor: pointer;
-
   /* color: #FFFFFF; */
   transition: background-color 500ms ease, color 500ms ease;
 }
@@ -105,13 +114,28 @@ address {
   font-size: 11px;
   line-height: 1.36;
   letter-spacing: 0.2em;
-
   color: var(--secondary-text-color-theme-light);
+  transition: color 500ms ease;
 }
 
 .cocial-links-list-link:hover,
 .cocial-links-list-link:focus {
   color: var(--accent-color);
+}
+
+.cocial-links-list {
+  display: flex;
+  align-items: center;
+}
+
+.cocial-links-list::before {
+  display: block;
+  content: "";
+  width: 60px;
+  height: 1px;
+  flex-shrink: 0;
+  margin-right: 40px;
+  background-color: var(--secondary-text-color-theme-light);
 }
 
 .overtitle {
@@ -149,22 +173,14 @@ address {
   background-color: var(--secondary-text-color-theme-light);
 }
 
-.secondary-title {
+.main-title {
   font-family: var(--secondary-font-family);
   font-weight: 700;
-  font-size: 42px;
-  line-height: 1.17;
+  font-size: 72px;
+  line-height: 1.18;
   letter-spacing: 0.05em;
-}
-
-.title-theme-dark {
   color: #ffffff;
-  margin-bottom: 44px;
-}
-
-.title-theme-light {
-  color: var(--secondary-text-color-theme-light);
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .description {
@@ -183,18 +199,22 @@ address {
   color: var(--primary-text-color-theme-light);
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
+.secondary-title {
+  font-family: var(--secondary-font-family);
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+}
 
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+.title-theme-dark {
+  color: #ffffff;
+  margin-bottom: 44px;
+}
+
+.title-theme-light {
+  color: var(--secondary-text-color-theme-light);
+  margin-bottom: 20px;
 }
 
 .social-list {
@@ -228,440 +248,12 @@ address {
   fill: var(--accent-color);
 }
 
-/* ====== END COMPONENTS ====== */
-
-/* ====== START HEADER ====== */
-
-.header {
-  position: absolute;
-  width: 100%;
-
-  margin-top: 32px;
-  margin-bottom: 32px;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.nav-list {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  margin-right: 70px;
-}
-
-.nav-list-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-.contact-number {
-  margin-left: auto;
-  margin-right: 40px;
-}
-
-.nav-list-link,
-.contact-number {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-
-  color: #ffffff;
-  transition: color 500ms ease;
-}
-
-.nav-list-link:hover,
-.nav-list-link:focus {
-  color: var(--accent-color);
-}
-
-.contact-number:hover,
-.contact-number:focus {
-  color: var(--accent-color);
-}
-
-/* ====== END HEADER ====== */
-
-/* ====== START HERO ====== */
-
-/* .hero {
-  background-color: var(--secondary-text-color-theme-light);
-} */
-
-.hero-left-side {
-  display: flex;
-  align-items: flex-end;
-
-  width: 100px;
-  padding-left: 26px;
-  padding-bottom: 40px;
-}
-
-.cocial-links-list {
-  display: flex;
-  align-items: center;
-}
-
-.hero-cocial-links-list {
-  transform: rotate(-90deg);
-  transform-origin: left top;
-  gap: 40px;
-}
-
-.cocial-links-list::before {
-  display: block;
-  content: "";
-  width: 60px;
-  height: 1px;
-  flex-shrink: 0;
-  margin-right: 40px;
-
-  background-color: var(--secondary-text-color-theme-light);
-}
-
-.hero-right-side {
-  padding-left: 100px;
-  padding-top: 184px;
-  padding-bottom: 206px;
-  padding-right: 470px;
-
-  background-color: var(--secondary-text-color-theme-light);
-  background-image: linear-gradient(
-      rgba(25, 28, 38, 0.2),
-      rgba(25, 28, 38, 0.2)
-    ),
-    url(../images/hero-bg-img.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.main-title {
-  font-family: var(--secondary-font-family);
-  font-weight: 700;
-  font-size: 72px;
-  line-height: 1.18;
-  letter-spacing: 0.05em;
-
-  color: #ffffff;
-  padding-bottom: 20px;
-}
-
-.hero-right-side > .overtitle {
-  padding-bottom: 20px;
-}
-
-/* ====== END HERO ====== */
-
-/* ====== START ABOUT US ====== */
-
-.about-us-list {
-  gap: 30px;
-}
-
-.about-wraper {
-  padding-left: 31px;
-}
-
-.about-wraper > .description {
-  margin-bottom: 20px;
-}
-
-.about-descr-wraper {
-  max-width: 500px;
-}
-
-.about-description {
-  font-family: "Open Sans";
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.86;
-  letter-spacing: 0.02em;
-  width: 500px;
-  margin-bottom: 42px;
-
-  color: var(--primary-text-color-theme-light);
-}
-
-/* ====== END ABOUT US ====== */
-
-/* ====== START OUR PRICES ====== */
-
-.prices-section {
-  background-color: #111319;
-  /* background-image: linear-gradient(
-      rgba(17, 19, 25, 0.8),
-      rgba(17, 19, 25, 0.8)
-    ),
-    url("../images/prices-bg-img.jpg"); */
-  background-image: url("../images/prices-bg-img.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.prices-list {
-  width: 585px;
-  padding: 30px 40px;
-}
-
-.prices-list-item {
-  display: flex;
-  justify-content: space-between;
-}
-
-.prices-list-item:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-.prices-list-wraper {
-  margin-bottom: 50px;
-}
-
-.prices-list-left {
-  width: 585px;
-  height: 240px;
-  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
-}
-
-.prices-list-right {
-  width: 585px;
-  height: 240px;
-  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
-}
-
-.prices .modal-btn {
-  display: block;
-  color: var(--secondary-text-color-theme-dark);
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* ======  END OUR PRICES ====== */
-
-/* ====== START BENEFITS ====== */
-
-.benefits > .container {
-  padding-left: 155px;
-}
-.benefits-list {
-  flex-wrap: wrap;
-  /* gap: 30px; */
-}
-
-.benefits-list-item {
-  height: 133px;
-  padding: 20px 24px;
-  text-align: center;
-  background-color: #f7f7f7;
-  /* outline: 1px solid #000000; */
-}
-
-.benefits-list-item:nth-child(2n) {
-  margin-top: 30px;
-}
-
-.benefits-list-item:nth-child(2n + 1) {
-  margin-right: 30px;
-}
-
-.quantity {
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: var(--secondary-text-color-theme-light);
-}
-
-.plus {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.38;
-  vertical-align: top;
-
-  color: var(--accent-color);
-}
-
-.benefits-description {
-  width: 122px;
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  text-align: center;
-
-  color: var(--secondary-text-color-theme-light);
-}
-
-.benefits-descr-wraper {
-  padding-left: 125px;
-}
-
-.benefits .secondary-title {
-  width: 420px;
-}
-
-/* ====== END BENEFITS ====== */
-
-/* ====== START MASTERS ====== */
-
-.masters-section {
-  background-color: var(--bg-color);
-}
-
-.masters-section .secondary-title {
-  margin-bottom: 44px;
-}
-
-.masters-list {
-  display: flex;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
-.masters-list-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
-.masters-content-wraper {
-  padding-top: 30px;
-  padding-left: 82px;
-  padding-right: 82px;
-}
-
-.masters-name {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.39;
-  text-align: center;
-  letter-spacing: 0.02em;
-
-  color: var(--secondary-text-color-theme-light);
-  margin-bottom: 8px;
-}
-
-.masters-position {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.02em;
-
-  color: var(--accent-color);
-  margin-bottom: 30px;
-}
-
-/* ====== END MASTERS ====== */
-
-/* ====== START  GALLARY ====== */
-
-.gallery .overtitle {
-  padding-bottom: 44px;
-}
-
-.gallary-list {
-  gap: 30px;
-}
-
-/* ======  END GALLARY ====== */
-
-/* ====== START CONTACTS ====== */
-
-.contacts-section {
-  background-color: #191c26;
-}
-
-.contacts-form {
-  padding-left: 55px;
-  width: 50%;
-}
-
-.contacts-form .modal-btn {
-  color: var(--secondary-text-color-theme-dark);
-}
-
-.contacts-info {
-  padding-left: 100px;
-  width: 50%;
-  background-image: url("../images/contacts-bg-img.png");
-  background-size: cover;
-}
-
-.contact-info-item:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-.contact-info-link {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.67;
-  letter-spacing: 0.02em;
-
-  color: var(--primary-text-color-theme-dark);
-}
-
-.contact-info-link:hover,
-.contact-info-link:focus {
-  color: var(--accent-color);
-}
-
-.contact-info-list {
-  margin-bottom: 66px;
-}
-
-.contacts-section > .overtitle {
-  color: var(--secondary-text-color-theme-dark);
-}
-
-.contacts-section > .description {
-  font-family: var(--primary-font-family);
-}
-
-/* ====== END CONTACTS ====== */
-
-/* ====== START FOOTER ====== */
-
-.footer {
-  padding-top: 55px;
-  padding-bottom: 55px;
-}
-
-.footer > .flex-container {
-  justify-content: space-between;
-}
-
-.copyright {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.2em;
-
-  color: var(--primary-text-color-theme-dark);
-}
-
-.footer .cocial-links-list-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-/* ====== END FOOTER ====== */
-
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-
   background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 500ms ease, visibility 500ms ease;
 }
@@ -690,7 +282,6 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
-
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -756,7 +347,7 @@ address {
 }
 
 .contact-form-massage::placeholder {
-  text-transform: uppercase ;
+  text-transform: uppercase;
 }
 
 .contact-form-checkbox-wrapper {
@@ -783,7 +374,7 @@ address {
 }
 
 .contact-form-checkbox-label::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 18px;
   height: 18px;
@@ -811,7 +402,6 @@ address {
   border: 1px solid var(--accent-color);
   border-radius: 25px;
   background-color: transparent;
-
   font-family: inherit;
   font-weight: 600;
   font-size: 12px;
@@ -819,7 +409,6 @@ address {
   letter-spacing: 0.09em;
   text-transform: uppercase;
   cursor: pointer;
-
   transition: background-color 500ms ease, color 500ms ease;
 }
 
@@ -828,3 +417,346 @@ address {
   background-color: var(--accent-color);
   color: #ffffff;
 }
+
+.header {
+  position: absolute;
+  width: 100%;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 70px;
+}
+
+.nav-list-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.contact-number {
+  margin-left: auto;
+  margin-right: 40px;
+}
+
+.nav-list-link,
+.contact-number {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  transition: color 500ms ease;
+}
+
+.nav-list-link:hover,
+.nav-list-link:focus {
+  color: var(--accent-color);
+}
+
+.contact-number:hover,
+.contact-number:focus {
+  color: var(--accent-color);
+}
+
+.hero-left-side {
+  display: flex;
+  align-items: flex-end;
+  width: 100px;
+  padding-left: 26px;
+  padding-bottom: 40px;
+}
+
+.hero-right-side {
+  padding-left: 100px;
+  padding-top: 184px;
+  padding-bottom: 206px;
+  padding-right: 470px;
+  background-color: var(--secondary-text-color-theme-light);
+  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero-bg-img.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero-cocial-links-list {
+  transform: rotate(-90deg);
+  transform-origin: left top;
+  gap: 40px;
+}
+
+.hero-right-side > .overtitle {
+  padding-bottom: 20px;
+}
+
+.about-us-list {
+  gap: 30px;
+}
+
+.about-wraper {
+  padding-left: 31px;
+}
+
+.about-wraper > .description {
+  margin-bottom: 20px;
+}
+
+.about-descr-wraper {
+  max-width: 500px;
+}
+
+.about-description {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.02em;
+  width: 500px;
+  margin-bottom: 42px;
+  color: var(--primary-text-color-theme-light);
+}
+
+.prices-section {
+  background-color: #111319;
+  /* background-image: linear-gradient(
+      rgba(17, 19, 25, 0.8),
+      rgba(17, 19, 25, 0.8)
+    ),
+    url("../images/prices-bg-img.jpg"); */
+  background-image: url("../images/prices-bg-img.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.prices-list {
+  width: 585px;
+  padding: 30px 40px;
+}
+
+.prices-list-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.prices-list-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.prices-list-wraper {
+  margin-bottom: 50px;
+}
+
+.prices-list-left {
+  width: 585px;
+  height: 240px;
+  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+
+.prices-list-right {
+  width: 585px;
+  height: 240px;
+  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+}
+
+.prices .modal-btn {
+  display: block;
+  color: var(--secondary-text-color-theme-dark);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.benefits > .container {
+  padding-left: 155px;
+}
+
+.benefits-list {
+  flex-wrap: wrap;
+  /* gap: 30px; */
+}
+
+.benefits-list-item {
+  height: 133px;
+  padding: 20px 24px;
+  text-align: center;
+  background-color: #f7f7f7;
+  /* outline: 1px solid #000000; */
+}
+
+.benefits-list-item:nth-child(2n) {
+  margin-top: 30px;
+}
+
+.benefits-list-item:nth-child(2n+1) {
+  margin-right: 30px;
+}
+
+.quantity {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: var(--secondary-text-color-theme-light);
+}
+
+.plus {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.38;
+  vertical-align: top;
+  color: var(--accent-color);
+}
+
+.benefits-description {
+  width: 122px;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-align: center;
+  color: var(--secondary-text-color-theme-light);
+}
+
+.benefits-descr-wraper {
+  padding-left: 125px;
+}
+
+.benefits .secondary-title {
+  width: 420px;
+}
+
+.masters-section {
+  background-color: var(--bg-color);
+}
+
+.masters-section .secondary-title {
+  margin-bottom: 44px;
+}
+
+.masters-list {
+  display: flex;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.masters-list-item {
+  flex-basis: calc(33.3333333333% - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.masters-content-wraper {
+  padding-top: 30px;
+  padding-left: 82px;
+  padding-right: 82px;
+}
+
+.masters-name {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.39;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color-theme-light);
+  margin-bottom: 8px;
+}
+
+.masters-position {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  margin-bottom: 30px;
+}
+
+.gallery .overtitle {
+  padding-bottom: 44px;
+}
+
+.gallary-list {
+  gap: 30px;
+}
+
+.contacts-section {
+  background-color: #191c26;
+}
+
+.contacts-form {
+  padding-left: 55px;
+  width: 50%;
+}
+
+.contacts-form .modal-btn {
+  color: var(--secondary-text-color-theme-dark);
+}
+
+.contacts-info {
+  padding-left: 100px;
+  width: 50%;
+  background-image: url("../images/contacts-bg-img.png");
+  background-size: cover;
+}
+
+.contact-info-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.contact-info-link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color-theme-dark);
+}
+
+.contact-info-link:hover,
+.contact-info-link:focus {
+  color: var(--accent-color);
+}
+
+.contact-info-list {
+  margin-bottom: 66px;
+}
+
+.contacts-section > .overtitle {
+  color: var(--secondary-text-color-theme-dark);
+}
+
+.contacts-section > .description {
+  font-family: var(--primary-font-family);
+}
+
+.footer {
+  padding-top: 55px;
+  padding-bottom: 55px;
+}
+
+.footer > .flex-container {
+  justify-content: space-between;
+}
+
+.copyright {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: var(--primary-text-color-theme-dark);
+}
+
+.footer .cocial-links-list-item:not(:last-child) {
+  margin-right: 40px;
+}/*# sourceMappingURL=main.css.map */
