--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -12,21 +12,19 @@
   letter-spacing: 0.09em;
   text-transform: uppercase;
   cursor: pointer;
-
-  /* color: #FFFFFF; */
   transition: background-color 500ms ease, color 500ms ease;
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--secondary-text-color-theme-dark);
+  }
 }
 
-.modal-btn:hover,
-.modal-btn:focus {
-  background-color: var(--accent-color);
-  color: var(--secondary-text-color-theme-dark);
-}
-
-.modal-btn-theme-light {
+.modal-btn_theme_light {
   color: var(--secondary-text-color-theme-light);
 }
 
-.modal-btn-theme-dark {
+.modal-btn_theme_dark {
   color: var(--secondary-text-color-theme-dark);
 }
