--- a/css/main.css
+++ b/css/main.css
@@ -91,21 +91,18 @@ address {
   letter-spacing: 0.09em;
   text-transform: uppercase;
   cursor: pointer;
-  /* color: #FFFFFF; */
   transition: background-color 500ms ease, color 500ms ease;
 }
-
-.modal-btn:hover,
-.modal-btn:focus {
+.modal-btn:hover, .modal-btn:focus {
   background-color: var(--accent-color);
   color: var(--secondary-text-color-theme-dark);
 }
 
-.modal-btn-theme-light {
+.modal-btn_theme_light {
   color: var(--secondary-text-color-theme-light);
 }
 
-.modal-btn-theme-dark {
+.modal-btn_theme_dark {
   color: var(--secondary-text-color-theme-dark);
 }
 
@@ -117,9 +114,7 @@ address {
   color: var(--secondary-text-color-theme-light);
   transition: color 500ms ease;
 }
-
-.cocial-links-list-link:hover,
-.cocial-links-list-link:focus {
+.cocial-links-list-link:hover, .cocial-links-list-link:focus {
   color: var(--accent-color);
 }
 
@@ -127,7 +122,6 @@ address {
   display: flex;
   align-items: center;
 }
-
 .cocial-links-list::before {
   display: block;
   content: "";
@@ -148,7 +142,6 @@ address {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
-
 .overtitle::before {
   content: "";
   width: 60px;
@@ -160,7 +153,6 @@ address {
 .overtitle-theme-dark {
   color: rgba(157, 164, 189, 0.6);
 }
-
 .overtitle-theme-dark::before {
   background-color: rgba(157, 164, 189, 0.6);
 }
@@ -168,7 +160,6 @@ address {
 .overtitle-theme-light {
   color: var(--secondary-text-color-theme-light);
 }
-
 .overtitle-theme-light::before {
   background-color: var(--secondary-text-color-theme-light);
 }
@@ -232,19 +223,15 @@ address {
   border-radius: 50%;
   transition: background-color 500ms ease;
 }
+.social-list-link:hover, .social-list-link:focus {
+  background-color: var(--secondary-text-color-theme-light);
+}
 
 .social-list-icon {
   fill: var(--secondary-text-color-theme-light);
   transition: fill 500ms ease;
 }
-
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: var(--secondary-text-color-theme-light);
-}
-
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
+.social-list-link:hover .social-list-icon, .social-list-link:focus .social-list-icon {
   fill: var(--accent-color);
 }
 
@@ -257,7 +244,6 @@ address {
   background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 500ms ease, visibility 500ms ease;
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -310,14 +296,9 @@ address {
   border-radius: 5px;
   transition: border-color 500ms ease;
 }
-
 .contact-form-input:focus {
   outline: none;
   border-color: var(--accent-color);
-}
-
-.contact-form-input:focus + .contact-form-icon {
-  fill: var(--accent-color);
 }
 
 .contact-form-icon {
@@ -329,6 +310,9 @@ address {
   fill: #555555;
   transition: fiil 500ms ease;
 }
+.contact-form-input:focus + .contact-form-icon {
+  fill: var(--accent-color);
+}
 
 .contact-form-massage {
   width: 100%;
@@ -339,13 +323,11 @@ address {
   border-radius: 5px;
   resize: none;
 }
-
 .contact-form-massage:focus {
   outline: none;
   border-color: var(--accent-color);
   transition: border-color 500ms ease;
 }
-
 .contact-form-massage::placeholder {
   text-transform: uppercase;
 }
@@ -372,7 +354,6 @@ address {
   align-items: center;
   font-size: 14px;
 }
-
 .contact-form-checkbox-label::before {
   content: "";
   display: inline-block;
@@ -382,11 +363,9 @@ address {
   cursor: pointer;
   margin-right: 8px;
 }
-
 .contact-form-checkbox:focus + .contact-form-checkbox-label::before {
   outline: 1px solid var(--accent-color);
 }
-
 .contact-form-checkbox:checked + .contact-form-checkbox-label::before {
   background: url(../images/icon-check.svg);
   background-color: var(--accent-color);
@@ -411,9 +390,7 @@ address {
   cursor: pointer;
   transition: background-color 500ms ease, color 500ms ease;
 }
-
-.contact-form-submit-btn:focus,
-.contact-form-submit-btn:hover {
+.contact-form-submit-btn:focus, .contact-form-submit-btn:hover {
   background-color: var(--accent-color);
   color: #ffffff;
 }
@@ -435,16 +412,16 @@ address {
   align-items: center;
 }
 
+.header__logo {
+  margin-right: 70px;
+}
+
 .nav-list {
   display: flex;
   align-items: center;
 }
 
-.logo {
-  margin-right: 70px;
-}
-
-.nav-list-item:not(:last-child) {
+.nav-list__item:not(:last-child) {
   margin-right: 40px;
 }
 
@@ -453,7 +430,18 @@ address {
   margin-right: 40px;
 }
 
-.nav-list-link,
+.nav-list__link {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  transition: color 500ms ease;
+}
+.nav-list__link:hover, .nav-list__link:focus {
+  color: var(--accent-color);
+}
+
 .contact-number {
   font-weight: 600;
   font-size: 12px;
@@ -462,14 +450,7 @@ address {
   color: #ffffff;
   transition: color 500ms ease;
 }
-
-.nav-list-link:hover,
-.nav-list-link:focus {
-  color: var(--accent-color);
-}
-
-.contact-number:hover,
-.contact-number:focus {
+.contact-number:hover, .contact-number:focus {
   color: var(--accent-color);
 }
 
@@ -531,11 +512,6 @@ address {
 
 .prices-section {
   background-color: #111319;
-  /* background-image: linear-gradient(
-      rgba(17, 19, 25, 0.8),
-      rgba(17, 19, 25, 0.8)
-    ),
-    url("../images/prices-bg-img.jpg"); */
   background-image: url("../images/prices-bg-img.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -550,7 +526,6 @@ address {
   display: flex;
   justify-content: space-between;
 }
-
 .prices-list-item:not(:last-child) {
   margin-bottom: 20px;
 }
@@ -592,13 +567,10 @@ address {
   padding: 20px 24px;
   text-align: center;
   background-color: #f7f7f7;
-  /* outline: 1px solid #000000; */
 }
-
 .benefits-list-item:nth-child(2n) {
   margin-top: 30px;
 }
-
 .benefits-list-item:nth-child(2n+1) {
   margin-right: 30px;
 }
