--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,12 +7,12 @@
 
   background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 500ms ease, visibility 500ms ease;
-}
 
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
 
 .modal {
@@ -61,15 +61,11 @@
   border: 1px solid #555555;
   border-radius: 5px;
   transition: border-color 500ms ease;
-}
 
-.contact-form-input:focus {
-  outline: none;
-  border-color: var(--accent-color);
-}
-
-.contact-form-input:focus + .contact-form-icon {
-  fill: var(--accent-color);
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
 }
 
 .contact-form-icon {
@@ -80,6 +76,10 @@
   transform: translateY(-50%);
   fill: #555555;
   transition: fiil 500ms ease;
+
+  .contact-form-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 
 .contact-form-massage {
@@ -90,16 +90,16 @@
   border: 1px solid #555555;
   border-radius: 5px;
   resize: none;
-}
 
-.contact-form-massage:focus {
-  outline: none;
-  border-color: var(--accent-color);
-  transition: border-color 500ms ease;
-}
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+    transition: border-color 500ms ease;
+  }
 
-.contact-form-massage::placeholder {
-  text-transform: uppercase;
+  &::placeholder {
+    text-transform: uppercase;
+  }
 }
 
 .contact-form-checkbox-wrapper {
@@ -123,26 +123,26 @@
   display: flex;
   align-items: center;
   font-size: 14px;
-}
 
-.contact-form-checkbox-label::before {
-  content: "";
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  outline: 1px solid #555555;
-  cursor: pointer;
-  margin-right: 8px;
-}
+  &::before {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    outline: 1px solid #555555;
+    cursor: pointer;
+    margin-right: 8px;
 
-.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
-  outline: 1px solid var(--accent-color);
-}
+    .contact-form-checkbox:focus + & {
+      outline: 1px solid var(--accent-color);
+    }
 
-.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
-  background: url(../images/icon-check.svg);
-  background-color: var(--accent-color);
-  background-size: cover;
+    .contact-form-checkbox:checked + & {
+      background: url(../images/icon-check.svg);
+      background-color: var(--accent-color);
+      background-size: cover;
+    }
+  }
 }
 
 .contact-form-submit-btn {
@@ -162,12 +162,11 @@
   letter-spacing: 0.09em;
   text-transform: uppercase;
   cursor: pointer;
-
   transition: background-color 500ms ease, color 500ms ease;
-}
 
-.contact-form-submit-btn:focus,
-.contact-form-submit-btn:hover {
-  background-color: var(--accent-color);
-  color: #ffffff;
+  &:focus,
+  &:hover {
+    background-color: var(--accent-color);
+    color: #ffffff;
+  }
 }
