--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -11,15 +11,14 @@
   padding: 20px 24px;
   text-align: center;
   background-color: #f7f7f7;
-  /* outline: 1px solid #000000; */
-}
 
-.benefits-list-item:nth-child(2n) {
-  margin-top: 30px;
-}
+  &:nth-child(2n) {
+    margin-top: 30px;
+  }
 
-.benefits-list-item:nth-child(2n + 1) {
-  margin-right: 30px;
+  &:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
 }
 
 .quantity {
