--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,16 +16,16 @@
   align-items: center;
 }
 
+.header__logo {
+  margin-right: 70px;
+}
+
 .nav-list {
   display: flex;
   align-items: center;
 }
 
-.logo {
-  margin-right: 70px;
-}
-
-.nav-list-item:not(:last-child) {
+.nav-list__item:not(:last-child) {
   margin-right: 40px;
 }
 
@@ -34,23 +34,30 @@
   margin-right: 40px;
 }
 
-.nav-list-link,
+.nav-list__link {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+  transition: color 500ms ease;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
 .contact-number {
   font-weight: 600;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.1em;
-
   color: #ffffff;
   transition: color 500ms ease;
-}
 
-.nav-list-link:hover,
-.nav-list-link:focus {
-  color: var(--accent-color);
-}
-
-.contact-number:hover,
-.contact-number:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
