--- a/sass/layout/_prices.scss
+++ b/sass/layout/_prices.scss
@@ -1,10 +1,5 @@
 .prices-section {
   background-color: #111319;
-  /* background-image: linear-gradient(
-      rgba(17, 19, 25, 0.8),
-      rgba(17, 19, 25, 0.8)
-    ),
-    url("../images/prices-bg-img.jpg"); */
   background-image: url("../images/prices-bg-img.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -18,10 +13,10 @@
 .prices-list-item {
   display: flex;
   justify-content: space-between;
-}
 
-.prices-list-item:not(:last-child) {
-  margin-bottom: 20px;
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .prices-list-wraper {
